--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 
     <div class="container">
+        <div class="row g-3">
 
     <nav class="navbar navbar-expand-lg bg-primary">
         <div class="container-fluid">
@@ -30,7 +31,7 @@
       </nav>
   
 
-        <div class="row">
+        <div class="row g-3">
             <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                 <label for="" class="form-label">USERNAME</label>
             </div>
@@ -38,7 +39,7 @@
                 <input placeholder="enter username" type="text" name="" id="" class="form-control">
             </div>
             <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
-                <label for="PASSWORD" class="form-label"></label>
+                <label for="PASSWORD" class="form-label">PASSWORD</label>
             </div>
             <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                 <input placeholder="enter password" type="password" name="" id="" class="form-control">
@@ -52,6 +53,7 @@
         </div>
 
     </div>
+</div>
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
